2004-10-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-desktop has been branched,
	and added bookmark-applet for real.

2004-10-27  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Added bookmark-applet.

2004-10-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-utils has been branched.

2004-10-21  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Separated all non-core Gnome groups into
	HEAD release.

2004-10-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eog has been branched.

2004-10-20  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Added tomboy.

2004-10-16  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: gimp, gimp-libgimp, gimp-plug-ins,
	gimp-script-fu, gimp-tips are back on HEAD.

2004-10-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center has been branched.

2004-10-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: The gedit branch was accidentally named
	'gedit-2-8' instead of 'gnome-2-8'; making the appropriate correction
	in the translation status pages.

2004-10-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gedit has been branched.

2004-10-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: metacity has been branched.

2004-10-11  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: gnome-panel has been branched.

2004-10-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2004-10-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added contact-lookup-applet to extras.

2004-10-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add a gnome-2.10 release
	section.

2004-09-29  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Remove atomix, author stated clearly in