@@ -309,7 +309,7 @@
       <component name="eel" dir="eel" group="desktop">
         <podir dir="po"/>
         <potname name="eel-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-8"/>
         <regenerate/>
         <download/>
       </component>
@@ -1530,7 +1530,7 @@
       <component name="gnome-vfs" dir="gnome-vfs" group="developer-libs">
         <podir dir="po"/>
         <potname name="gnome-vfs-2.0.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-8"/>
         <regenerate/>
         <download/>
       </component>
@@ -2349,7 +2349,7 @@
       <component name="nautilus" dir="nautilus" group="desktop">
         <podir dir="po"/>
         <potname name="nautilus.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-8"/>
         <regenerate/>
         <download/>
       </component>
