@@ -1,3 +1,8 @@
+2004-10-29  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: eel, gnome-vfs, and nautilus have
+	all been branched.
+
 2004-10-28  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-desktop has been branched,
